[package]
name = "winpipe2serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { features = ["std", "commapi", "errhandlingapi", "fileapi", "namedpipeapi", "handleapi", "ioapiset", "synchapi", "winbase", "winerror", "winnt"] }
