[package]
name = "winpipe2serial"
version = "0.1.0"
edition = "2021"
authors = ["Gopakumar C E"]
description = "Utility to link a windows named pipe to a serial COM port"
homepage = "https://github.com/gopakumarce/winpipe2serial.git"
repository = "https://github.com/gopakumarce/winpipe2serial.git"
readme = "README.md"
keywords = ["named-pipe", "windows", "serial", "COM-port"]
categories = ["embedded", "serial"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.4", features = ["derive"]}
winapi = {version = "0.3.9", features = ["std", "commapi", "errhandlingapi", "fileapi", "namedpipeapi", "handleapi", "ioapiset", "synchapi", "winbase", "winerror", "winnt"] }
